fixed spacing project-section/tile

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -213,11 +213,13 @@ nav {
   .projects__tag{
     padding: 0;
   }
-  .projects-text p{
-    margin-bottom: 45px;
-    &:after {
-      content: "_";
-    }
+  .projects-text {
+    margin: 2.5rem 0 2.5rem;
+    position: relative;
+    display: inline-block;
+    // &:after {
+    //   content: "_";
+    // }
   }
 }
 
@@ -225,7 +227,7 @@ nav {
   display: grid;
   grid-template-columns: repeat(4, minmax(200px, 1fr));
   grid-auto-rows: minmax(300px, auto);
-  grid-gap: 10px;
+  grid-gap: 1.3rem;
   margin: 10px;
 }
 .project-tile{
@@ -239,7 +241,8 @@ nav {
   background-color: $sticky-note;
 }
 .project-tile__title{
-  padding: 20px 10px;
+  // padding: 20px 10px;
+  padding: 1rem;
 }
 .project-tile__details{
   flex: 0 100%;
